RESOLVED FIXED95128
Fix compiler warnings in TextureMapperLayer.cpp
https://bugs.webkit.org/show_bug.cgi?id=95128
Summary Fix compiler warnings in TextureMapperLayer.cpp
Rob Buis
Reported 2012-08-27 14:40:50 PDT
With gcc 4.6.3: webkit/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp: In member function 'void WebCore::TextureMapperLayer::paintSelfAndChildren(const WebCore::TextureMapperPaintOptions&)': webkit/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:202:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] webkit/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp: In function 'bool WebCore::shouldKeepContentTexture(const WebCore::FilterOperations&)': webkit/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:325:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
Attachments
Rob Buis
Comment 1 2012-08-27 15:01:25 PDT
Note You need to log in before you can comment on or make changes to this bug.