Fix compiler warnings in TextureMapperLayer.cpp https://bugs.webkit.org/show_bug.cgi?id=95128

Reviewed by Noam Rosenthal.

Fix the warnings caused by -Wsign-compare.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelfAndChildren):
(WebCore::shouldKeepContentTexture):

Canonical link: https://commits.webkit.org/112980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126800 268f45cc-cd09-0410-ab3c-d52691b4dbfc